# flask-prisma-guard

./: README.md  app.py  gunicorn.conf.py  pyproject.toml  requirements.txt
deploy/: mindcheck.service  prisma-guard.nginx.conf  prisma-guard.service
mental_health_app/: __init__.py  predictor.py  recommendations.py  routes.py
models/: model_logistic_regression.pkl  pca.pkl  scaler.pkl
src/: routes.py
src/constants/: __init__.py
src/handlers/: predictor.py  recommendations.py
src/utils/: parsers.py
static/css/: about.css  base.css  home.css  predict.css  result.css
static/js/: about-animations.js  animations.js  home-animations.js  predict-animations.js  predict-form.js  result-animations.js
templates/: about.html  base.html  index.html  predict.html  result.html
